Made som smaller structural changes

--- a/deps/ar/Makefile
+++ b/deps/ar/Makefile
@@ -4,7 +4,6 @@ CFLAGS=-g -Wall -std=c++17
 OBJDIR=obj
 SRCDIR=./
 TESTDIR=tests
-BINDIR=
 ASMDIR=hex
 
 #Wildcard find all .c-files
@@ -13,7 +12,7 @@ SRCS=$(wildcard $(SRCDIR)/*.cpp)
 #Substitute all .c files with .obj files, from the SRCS-variable
 OBJS=$(patsubst $(SRCDIR)/%.cpp, $(OBJDIR)/%.obj, $(SRCS))
 
-BIN = ./main
+BIN=./main
 
 all:$(BIN)
 
@@ -24,9 +23,8 @@ release: $(BIN)
 
 #Makes the binary
 $(BIN): $(OBJS)
-	$(CC) $(CFLAGS) $(OBJS) -o $@
+	$(CC) $(CFLAGS) $(OBJS) -o $@ -I $(SRCDIR)
 
 #Make .obj files from the .c files
 $(OBJDIR)/%.obj: $(SRCDIR)/%.cpp
-	@mkdir -p $(dir $@)
-	$(CC) $(CFLAGS) -c $< -o $@ -I $(SRCDIR)
+	$(CC) $(CFLAGS) -c $< -o $@
