Usage of updated etoc package
Try to show error log of a failing documentation build

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -399,6 +399,7 @@ jobs:
           RESULT_VARIABLE result
         )
         if (NOT result EQUAL 0)
+          cat build/latex/doxygen_manual.log
           message(FATAL_ERROR "Building documentation failed")
         endif()
 
