issue #10023 Sitemap generation
A sitemap  (see https://www.sitemaps.org) is generated when the `GENERATE_SITEMAP` is set.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -308,6 +308,7 @@ add_library(doxymain STATIC
     rtfstyle.cpp
     searchindex.cpp
     searchindex_js.cpp
+    sitemap.cpp
     sqlite3gen.cpp
     stlsupport.cpp
     symbolresolver.cpp
