--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -432,7 +432,8 @@ jobs:
     - name: Publish Internal documentation to Github pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-         github_token: ${{ secrets.GITHUB_TOKEN }}
+         deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+         external_repository: doxygen/doxygen-docs
          publish_dir: build/doxygen_docs/html
       if: ${{ github.event_name == 'push' && matrix.config.name == 'Ubuntu Latest GCC Release' }}
 
