Regression chm file generation
- the svg files of the examples are missing.
- the file index.hhp.txt is obsolete, probably since (pull request 7179):
  ```
  Commit: 46ecf6bf78f1c0d4aa140db74847fafc5613dfe7 [46ecf6b]
  Date: Sunday, August 11, 2019 6:36:18 PM
  Generating doxygen's documentation in CHM format
  ```
- the mainpage disappeared due to the change of (`index.doc` to the dedicated `$(INDEX_DOC)`) i.e. pull request #9936:
  ```
  c2d1b62603ee858e2538e9491df0ef69d893fbb1 is the first bad commit
  Date:   Fri Mar 31 16:55:36 2023 -0400

    Use a CMake to change the mainpage name for LaTeX

    Cannot be overridden in doxygen_manual.tex anymore because the title is part of the page file.
  ```

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -78,7 +78,6 @@ set(DOC_FILES
         tables.doc
         grouping.doc
         htmlcmds.doc
-        index.hhp.txt
         infoflow.eps
         infoflow.fig
         infoflow.png
@@ -228,13 +227,13 @@ add_custom_target(docs
 if (build_doc_chm)
 add_custom_target(docs_chm
     COMMENT "Generating CHM documentation."
-    COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} HTML_HELP_COMPILER=${HTML_HELP_COMPILER} ${DOXYGEN_EXECUTABLE} Doxyfile_chm
+    COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} HTML_HELP_COMPILER=${HTML_HELP_COMPILER} INDEX_DOC=index_html.doc ${DOXYGEN_EXECUTABLE} Doxyfile_chm
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_BINARY_DIR}/html/examples ${PROJECT_BINARY_DIR}/chm/examples
     COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_BINARY_DIR}/chm/index.hhp ${PROJECT_BINARY_DIR}/chm/doxygen_manual.hhp
     COMMAND ${CMAKE_COMMAND} -E echo "import os" > ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py
     COMMAND ${CMAKE_COMMAND} -E echo "for root, dirs, files in os.walk('examples'):" >> ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py
     COMMAND ${CMAKE_COMMAND} -E echo "    for file in files:" >> ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py
-    COMMAND ${CMAKE_COMMAND} -E echo "        if file.endswith('.html') or file.endswith('.png') or file.endswith('.css') or file.endswith('.gif'):" >> ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py
+    COMMAND ${CMAKE_COMMAND} -E echo "        if file.endswith('.html') or file.endswith('.png') or file.endswith('.svg') or file.endswith('.css') or file.endswith('.gif'):" >> ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py
     COMMAND ${CMAKE_COMMAND} -E echo "            print(os.path.join(root, file))" >> ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py
     COMMAND ${CMAKE_COMMAND} -E chdir  ${PROJECT_BINARY_DIR}/chm ${PYTHON_EXECUTABLE} ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py >> ${PROJECT_BINARY_DIR}/chm/doxygen_manual.hhp
     COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_BINARY_DIR}/chm "${HTML_HELP_COMPILER}" doxygen_manual.hhp || echo > nul
