Setting correct version in LaTeX documentation
Due to the fact that on `tex` files it is not possible to use the normal environment replacement strategy of cmake the `@VERSION@` does not get replaced anymore.
An internal LaTeX possibility (see: https://tex.stackexchange.com/a/583976/44119) looks like to be LateX version dependent, so a Cmake-Python solution

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -202,9 +202,9 @@ add_custom_target(run_doxygen
 add_custom_target(doxygen_pdf
         COMMENT "Generating Doxygen Manual PDF."
         COMMAND ${CMAKE_COMMAND} -E remove refman.tex
-        COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_BINARY_DIR}/doc/doxygen_manual.tex  .
         COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_BINARY_DIR}/doc/manual.sty  .
         COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_SOURCE_DIR}/doc/doxygen_logo.pdf  .
+        COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_BINARY_DIR}/latex ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/doc/doxygen_manual_latex.py "${VERSION}" "${PROJECT_BINARY_DIR}/doc/doxygen_manual.tex" "${PROJECT_BINARY_DIR}/latex/doxygen_manual.tex"
         COMMAND ${PDFLATEX}  -shell-escape doxygen_manual.tex
         COMMAND ${MAKEINDEX} doxygen_manual.idx
         COMMAND ${PDFLATEX}  -shell-escape doxygen_manual.tex
