ci: run tests with explicitly specified env vars
The previous one is:
```cmake
        execute_process(
          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf"
          RESULT_VARIABLE result
        )
```
Which makes me confuse:
1. Not clear about `TEST_FLAGS` is an env var
2. The specified `TEST_FLAGS` is not working on Windows prompt, i.e.
   testing/runtests.py got empty `TEST_FLAGS`

--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -369,7 +369,9 @@ jobs:
         set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
 
         execute_process(
-          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf"
+          COMMAND
+            cmake -E env TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf"
+            cmake --build build --target tests
           RESULT_VARIABLE result
         )
         if (NOT result EQUAL 0)
@@ -383,7 +385,9 @@ jobs:
         set(ENV{CTEST_OUTPUT_ON_FAILURE} "ON")
 
         execute_process(
-          COMMAND cmake --build build --target tests TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf --pdf"
+          COMMAND
+            cmake -E env TEST_FLAGS="--xml --xmlxsd --xhtml --qhp --docbook --rtf --pdf"
+            cmake --build build --target tests 
           RESULT_VARIABLE result
         )
         if (NOT result EQUAL 0)
