fix: compile translation files on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,7 @@ endif()
 
 include(cmake/CompilerWarnings.cmake)
 include(cmake/Coverage.cmake)
+include(cmake/WindowsEncoding.cmake)
 
 add_subdirectory(deps)
 add_subdirectory(libversion)
