--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ include_directories(
     ${PROJECT_SOURCE_DIR}/deps/libmd5
     ${PROJECT_SOURCE_DIR}/deps/liblodepng
     ${PROJECT_SOURCE_DIR}/deps/libmscgen
+    ${PROJECT_SOURCE_DIR}/deps/sqlite3
     ${PROJECT_SOURCE_DIR}/libversion
     ${PROJECT_SOURCE_DIR}/libxml
     ${PROJECT_SOURCE_DIR}/vhdlparser
@@ -30,10 +31,9 @@ add_definitions(-DYY_BUF_SIZE=${enlarge_lex_buffers} -DYY_READ_BUF_SIZE=${enlarg
 file(GENERATE OUTPUT ${GENERATED_SRC}/settings.h
 CONTENT "#ifndef SETTINGS_H
 #define SETTINGS_H
-#define USE_SQLITE3 ${sqlite3}
 #define USE_LIBCLANG ${clang}
 #define IS_SUPPORTED(x) \\
-  ((USE_SQLITE3  && strcmp(\"USE_SQLITE3\",(x))==0)  || \\
+  ( \\
    (USE_LIBCLANG && strcmp(\"USE_LIBCLANG\",(x))==0) || \\
   0)
 #endif" )
@@ -383,13 +383,13 @@ target_link_libraries(doxygen PRIVATE
     doxymain
     doxycfg
     md5
+    sqlite3
     lodepng
     mscgen
     xml
     doxygen_version
     vhdlparser
     spdlog
-    ${SQLITE3_LIBRARIES}
     ${ICONV_LIBRARIES}
     ${CMAKE_THREAD_LIBS_INIT}
     ${EXTRA_LIBS}
