Show anonymous namespaces in internal documentation
In the terminal output of the internal documentation we see things like `@239::TagAnchoInfo` but in the documentation we find `TagAnchorInfo` only in a source listing.
It would be good to see them also in the regular internal documentation.

--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -63,7 +63,7 @@ EXTRACT_PACKAGE        = NO
 EXTRACT_STATIC         = YES
 EXTRACT_LOCAL_CLASSES  = YES
 EXTRACT_LOCAL_METHODS  = NO
-EXTRACT_ANON_NSPACES   = NO
+EXTRACT_ANON_NSPACES   = YES
 RESOLVE_UNNAMED_PARAMS = YES
 HIDE_UNDOC_MEMBERS     = NO
 HIDE_UNDOC_CLASSES     = NO
