--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -96,8 +96,9 @@ jobs:
 
     - name: Install LaTeX (Linux)
       run: |
-        sudo apt upgrade
         sudo apt update --fix-missing
+        sudo apt upgrade
+        sudo apt update
         sudo apt-get install texlive texlive-latex-recommended texlive-extra-utils texlive-latex-extra texlive-font-utils
       if: startsWith(matrix.config.os,'ubuntu-')
 
