issue #10104 Incorrect handling of unicode characters

--- a/vhdlparser/CMakeLists.txt
+++ b/vhdlparser/CMakeLists.txt
@@ -34,6 +34,13 @@ add_custom_command(
 )
 set_source_files_properties(${GENERATED_SRC}/VhdlParser_adj.cc PROPERTIES GENERATED 1)
 
+add_custom_command(
+    COMMAND ${PYTHON_EXECUTABLE} ${PROJECT_SOURCE_DIR}/vhdlparser/vhdl_adj.py ${PROJECT_SOURCE_DIR}/vhdlparser/VhdlParserTokenManager.cc ${GENERATED_SRC}/VhdlParserTokenManager_adj.cc
+    DEPENDS ${PROJECT_SOURCE_DIR}/vhdlparser/VhdlParserTokenManager.cc ${PROJECT_SOURCE_DIR}/vhdlparser/vhdl_adj.py
+    OUTPUT  ${GENERATED_SRC}/VhdlParserTokenManager_adj.cc
+)
+set_source_files_properties(${GENERATED_SRC}/VhdlParserTokenManager_adj.cc PROPERTIES GENERATED 1)
+
 include_directories(
 	${PROJECT_SOURCE_DIR}/src
 	${PROJECT_SOURCE_DIR}/vhdlparser
@@ -44,7 +51,7 @@ ParseException.cc
 Token.cc
 TokenMgrError.cc
 ${GENERATED_SRC}/VhdlParser_adj.cc
-VhdlParserTokenManager.cc
+${GENERATED_SRC}/VhdlParserTokenManager_adj.cc
 )
 add_dependencies(vhdlparser
     generate_configvalues_header
