add CMake option to use system spdlog

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     option(use_libc++  "Use libc++ as C++ standard library." ON)
 endif()
 option(use_libclang    "Add support for libclang parsing." OFF)
+option(use_sys_spdlog  "Use system spdlog instead of bundled." OFF)
 option(static_libclang "Link to a statically compiled version of LLVM/libclang." OFF)
 option(win_static      "Link with /MT in stead of /MD on windows" OFF)
 option(enable_console  "Enable that executables on Windows get the CONSOLE bit set for the doxywizard executable [development]"  OFF)
@@ -62,6 +63,9 @@ if (use_libclang)
 	set(clang    "1" CACHE INTERNAL "used in settings.h")
         find_package(LLVM CONFIG REQUIRED)
         find_package(Clang CONFIG REQUIRED)
+endif()
+if (use_sys_spdlog)
+        find_package(spdlog CONFIG REQUIRED)
 endif()
 if (build_wizard)
     if (force_qt STREQUAL "Qt6")
