--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -1,5 +1,7 @@
 add_subdirectory(libmd5)
 add_subdirectory(liblodepng)
 add_subdirectory(libmscgen)
-add_subdirectory(spdlog)
+if (NOT use_sys_spdlog)
+	add_subdirectory(spdlog)
+endif()
 add_subdirectory(sqlite3)
