--- a/doc_internal/Doxyfile.in
+++ b/doc_internal/Doxyfile.in
@@ -19,8 +19,8 @@ ABBREVIATE_BRIEF       =
 ALWAYS_DETAILED_SEC    = NO
 INLINE_INHERITED_MEMB  = NO
 FULL_PATH_NAMES        = YES
-STRIP_FROM_PATH        =
-STRIP_FROM_INC_PATH    =
+STRIP_FROM_PATH        = @CMAKE_SOURCE_DIR@
+STRIP_FROM_INC_PATH    = @CMAKE_SOURCE_DIR@
 SHORT_NAMES            = NO
 JAVADOC_AUTOBRIEF      = YES
 JAVADOC_BANNER         = NO
