add a use_sys_sqlite3 config option
fixes #10263

--- a/deps/CMakeLists.txt
+++ b/deps/CMakeLists.txt
@@ -4,4 +4,6 @@ add_subdirectory(libmscgen)
 if (NOT use_sys_spdlog)
 	add_subdirectory(spdlog)
 endif()
-add_subdirectory(sqlite3)
+if (NOT use_sys_sqlite3)
+	add_subdirectory(sqlite3)
+endif()
