--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     option(use_libc++  "Use libc++ as C++ standard library." ON)
 endif()
 option(use_libclang    "Add support for libclang parsing." OFF)
-option(use_sys_spdlog  "Use system spdlog instead of bundled." OFF)
+option(use_sys_spdlog  "Use system spdlog library instead of the one bundled." OFF)
+option(use_sys_sqlite3 "Use system sqlite3 library instead of the one bundled." OFF)
 option(static_libclang "Link to a statically compiled version of LLVM/libclang." OFF)
 option(win_static      "Link with /MT in stead of /MD on windows" OFF)
 option(enable_console  "Enable that executables on Windows get the CONSOLE bit set for the doxywizard executable [development]"  OFF)
@@ -66,6 +67,9 @@ if (use_libclang)
 endif()
 if (use_sys_spdlog)
         find_package(spdlog CONFIG REQUIRED)
+endif()
+if (use_sys_sqlite3)
+        find_package(SQLite3 REQUIRED)
 endif()
 if (build_wizard)
     if (force_qt STREQUAL "Qt6")
