--- a/addon/doxyapp/CMakeLists.txt
+++ b/addon/doxyapp/CMakeLists.txt
@@ -46,7 +46,7 @@ mscgen
 doxygen_version
 doxycfg
 vhdlparser
-spdlog
+spdlog::spdlog
 ${ICONV_LIBRARIES}
 ${CMAKE_THREAD_LIBS_INIT}
 ${SQLITE3_LIBRARIES}
