--- a/examples/baseexample.cfg
+++ b/examples/baseexample.cfg
@@ -1,4 +1,5 @@
 OUTPUT_DIRECTORY   = $(PROJECT_BINARY_DIR)
+PROJECT_ICON       = ../examples/doxygen.ico
 CASE_SENSE_NAMES   = NO
 QUIET              = YES
 JAVADOC_AUTOBRIEF  = YES
