Rename `.doc` to `.dox in doxygen documentation
Rename `.doc` to `.dox` in doxygen documentation and adjust the processing accordingly.
The `.doc` extension is not supported by default by doxygen whilst `.dox` is.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -31,19 +31,19 @@ endif()
 
 set(DOC_INSTALL_DIR "share/doc/packages/doxygen" CACHE STRING "Relative path where to install the documentation")
 set(DOC_FILES
-        arch.doc
+        arch.dox
         archoverview.eps
         archoverview.svg
-        autolink.doc
-        changelog.doc
-        commands.doc
-        custcmd.doc
-        customize.doc
-        diagrams.doc
-        docblocks.doc
+        autolink.dox
+        changelog.dox
+        commands.dox
+        custcmd.dox
+        customize.dox
+        diagrams.dox
+        docblocks.dox
         Doxyfile
         doxygen_manual.css
-        doxygen_usage.doc
+        doxygen_usage.dox
         doxywizard_expert.png
         doxywizard_main.png
         doxywizard_menu_file.png
@@ -54,7 +54,7 @@ set(DOC_FILES
         doxywizard_page3.png
         doxywizard_page4.png
         doxywizard_run.png
-        doxywizard_usage.doc
+        doxywizard_usage.dox
         expert_bool.png
         expert_enum.png
         expert_int.png
@@ -67,36 +67,36 @@ set(DOC_FILES
         expert_string_filedir.png
         expert_string_image.png
         expert_string_string.png
-        external.doc
-        extsearch.doc
+        external.dox
+        extsearch.dox
         extsearch_flow.dot
         extsearch_flow.eps
         extsearch_flow.png
-        faq.doc
-        features.doc
-        formulas.doc
-        tables.doc
-        grouping.doc
-        htmlcmds.doc
+        faq.dox
+        features.dox
+        formulas.dox
+        tables.dox
+        grouping.dox
+        htmlcmds.dox
         infoflow.eps
         infoflow.fig
         infoflow.png
-        install.doc
+        install.dox
         layout_index_and_notreeview.png
         layout_index_and_treeview.png
         layout_noindex_and_notreeview.png
         layout_noindex_and_treeview.png
         layout_noindex_and_sidebar.png
-        lists.doc
-        markdown.doc
-        output.doc
-        perlmod.doc
-        preprocessing.doc
-        searching.doc
-        starting.doc
-        trouble.doc
-        xmlcmds.doc
-        emojisup.doc
+        lists.dox
+        markdown.dox
+        output.dox
+        perlmod.dox
+        preprocessing.dox
+        searching.dox
+        starting.dox
+        trouble.dox
+        xmlcmds.dox
+        emojisup.dox
         language.tpl
         maintainers.txt
         translator.py
@@ -162,33 +162,33 @@ configure_file(${PROJECT_SOURCE_DIR}/templates/icon/doxygen.ico ${PROJECT_BINARY
 
 # Call the main page "Introduction" in LaTeX, which is more appropriate for that format.
 set(MAINPAGE_TITLE Doxygen)
-configure_file(${PROJECT_SOURCE_DIR}/doc/index.doc          ${PROJECT_BINARY_DIR}/doc/index_html.doc)
+configure_file(${PROJECT_SOURCE_DIR}/doc/index.dox          ${PROJECT_BINARY_DIR}/doc/index_html.dox)
 set(MAINPAGE_TITLE Introduction)
-configure_file(${PROJECT_SOURCE_DIR}/doc/index.doc          ${PROJECT_BINARY_DIR}/doc/index_latex.doc)
+configure_file(${PROJECT_SOURCE_DIR}/doc/index.dox          ${PROJECT_BINARY_DIR}/doc/index_latex.dox)
 
-# doc/language.doc (see tag Doxyfile:INPUT)
+# doc/language.dox (see tag Doxyfile:INPUT)
 add_custom_command(
         COMMAND ${Python_EXECUTABLE} translator.py --doc ${PROJECT_SOURCE_DIR}
         DEPENDS ${PROJECT_SOURCE_DIR}/VERSION ${PROJECT_SOURCE_DIR}/doc/maintainers.txt ${PROJECT_SOURCE_DIR}/doc/language.tpl ${PROJECT_BINARY_DIR}/doc/translator.py ${LANG_FILES}
-        OUTPUT language.doc
+        OUTPUT language.dox
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/doc
 )
-set_source_files_properties(language.doc PROPERTIES GENERATED 1)
+set_source_files_properties(language.dox PROPERTIES GENERATED 1)
 
-# doc/config.doc (see tag Doxyfile:INPUT)
+# doc/config.dox (see tag Doxyfile:INPUT)
 add_custom_command(
-        COMMAND ${Python_EXECUTABLE}  ${TOP}/src/configgen.py -doc ${TOP}/src/config.xml > config.doc
+        COMMAND ${Python_EXECUTABLE}  ${TOP}/src/configgen.py -doc ${TOP}/src/config.xml > config.dox
         DEPENDS ${TOP}/src/config.xml ${TOP}/src/configgen.py
-        OUTPUT config.doc
+        OUTPUT config.dox
         WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/doc/
 )
-set_source_files_properties(config.doc PROPERTIES GENERATED 1)
+set_source_files_properties(config.dox PROPERTIES GENERATED 1)
 ################################################################################
 add_custom_target(run_doxygen
         COMMENT "Generating Latex and HTML documentation."
-        COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} INDEX_DOC=index_html.doc GENERATE_HTML=YES GENERATE_LATEX=NO ${DOXYGEN_EXECUTABLE}
-        COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} INDEX_DOC=index_latex.doc GENERATE_HTML=NO GENERATE_LATEX=YES ${DOXYGEN_EXECUTABLE}
-        DEPENDS ${PROJECT_BINARY_DIR}/doc/language.doc ${PROJECT_BINARY_DIR}/doc/config.doc
+        COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} INDEX_DOC=index_html.dox GENERATE_HTML=YES GENERATE_LATEX=NO ${DOXYGEN_EXECUTABLE}
+        COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} INDEX_DOC=index_latex.dox GENERATE_HTML=NO GENERATE_LATEX=YES ${DOXYGEN_EXECUTABLE}
+        DEPENDS ${PROJECT_BINARY_DIR}/doc/language.dox ${PROJECT_BINARY_DIR}/doc/config.dox
         DEPENDS ${OUT_DOC_FILES}
         DEPENDS examples
         DEPENDS doxygen
@@ -225,7 +225,7 @@ add_custom_target(docs
 if (build_doc_chm)
 add_custom_target(docs_chm
     COMMENT "Generating CHM documentation."
-    COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} HTML_HELP_COMPILER=${HTML_HELP_COMPILER} INDEX_DOC=index_html.doc ${DOXYGEN_EXECUTABLE} Doxyfile_chm
+    COMMAND ${CMAKE_COMMAND} -E env VERSION=${VERSION} HTML_HELP_COMPILER=${HTML_HELP_COMPILER} INDEX_DOC=index_html.dox ${DOXYGEN_EXECUTABLE} Doxyfile_chm
     COMMAND ${CMAKE_COMMAND} -E copy_directory ${PROJECT_BINARY_DIR}/html/examples ${PROJECT_BINARY_DIR}/chm/examples
     COMMAND ${CMAKE_COMMAND} -E copy ${PROJECT_BINARY_DIR}/chm/index.hhp ${PROJECT_BINARY_DIR}/chm/doxygen_manual.hhp
     COMMAND ${CMAKE_COMMAND} -E echo "import os" > ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py
@@ -236,7 +236,7 @@ add_custom_target(docs_chm
     COMMAND ${CMAKE_COMMAND} -E chdir  ${PROJECT_BINARY_DIR}/chm ${Python_EXECUTABLE} ${PROJECT_BINARY_DIR}/chm/doxygen_manual_examples_chm.py >> ${PROJECT_BINARY_DIR}/chm/doxygen_manual.hhp
     COMMAND ${CMAKE_COMMAND} -E chdir ${PROJECT_BINARY_DIR}/chm "${HTML_HELP_COMPILER}" doxygen_manual.hhp || echo > nul
     COMMAND ${CMAKE_COMMAND} -E rename ${PROJECT_BINARY_DIR}/chm/index.chm ${PROJECT_BINARY_DIR}/chm/doxygen_manual.chm
-        DEPENDS ${PROJECT_BINARY_DIR}/doc/language.doc ${PROJECT_BINARY_DIR}/doc/config.doc
+        DEPENDS ${PROJECT_BINARY_DIR}/doc/language.dox ${PROJECT_BINARY_DIR}/doc/config.dox
         DEPENDS ${OUT_DOC_FILES}
         DEPENDS ${OUT_DOC_CHM_FILES}
         DEPENDS examples
