new page was missing in some indices.
Also fixed some typos, did some rewording, and added some more links.

--- a/doc/CMakeLists.txt
+++ b/doc/CMakeLists.txt
@@ -41,6 +41,7 @@ set(DOC_FILES
         customize.dox
         diagrams.dox
         docblocks.dox
+        additional.dox
         Doxyfile
         doxygen_manual.css
         doxygen_usage.dox
