Add test for failed generation of formulas

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -1,13 +1,16 @@
 # run all tests sequentially (keep for backward compatibility)
+
+set(OPTIONS --should_fail_id 102)
 add_custom_target(tests
   COMMENT "Running doxygen tests..."
-  COMMAND ${Python_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testing/runtests.py --doxygen ${PROJECT_BINARY_DIR}/bin/doxygen --inputdir ${PROJECT_SOURCE_DIR}/testing --outputdir ${PROJECT_BINARY_DIR}/testing
+  COMMAND ${Python_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testing/runtests.py ${OPTIONS} --doxygen ${PROJECT_BINARY_DIR}/bin/doxygen --inputdir ${PROJECT_SOURCE_DIR}/testing --outputdir ${PROJECT_BINARY_DIR}/testing
   DEPENDS doxygen
 )
 
 # get the files in the testing directory starting with 3 digits and an underscore
 file(GLOB TEST_FILES CONFIGURE_DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/[0-9][0-9][0-9]_*.*")
 
+set(102_formula_error_OPTIONS --xhtml --should_fail)
 foreach(TEST_FILE ${TEST_FILES})
   # extract the test name from the file name
   string(REGEX REPLACE "^.*/([0-9][0-9][0-9]*.*)\\.[^.]*$" "\\1" TEST_NAME "${TEST_FILE}")
@@ -15,6 +18,6 @@ foreach(TEST_FILE ${TEST_FILES})
   string(REGEX REPLACE "^.*/([0-9][0-9][0-9]*).*$" "\\1" TEST_ID "${TEST_FILE}")
   # add a test target for each test
   add_test(NAME ${TEST_NAME}
-    COMMAND ${Python_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testing/runtests.py --id ${TEST_ID} --doxygen $<TARGET_FILE:doxygen> --inputdir ${PROJECT_SOURCE_DIR}/testing --outputdir ${PROJECT_BINARY_DIR}/testing
+    COMMAND ${Python_EXECUTABLE} ${PROJECT_SOURCE_DIR}/testing/runtests.py ${${TEST_NAME}_OPTIONS} --id ${TEST_ID} --doxygen $<TARGET_FILE:doxygen> --inputdir ${PROJECT_SOURCE_DIR}/testing --outputdir ${PROJECT_BINARY_DIR}/testing
   )
 endforeach()
